# mono-seegoals

./: environment.ini
docker/: docker-compose.autostart_gameviewer.yml  docker-compose.competition.yml  docker-compose.fetdatorn.yml  docker-compose.local-ai.yml  docker-compose.local-gameviewer.yml  docker-compose.rw-testing.yml  docker-compose.simulation.yml  docker-compose.webdev.yml  docker-compose.yml
firmware/: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt
firmware/basestation/: .cproject  .mxproject  .project  README.md  STM32H563ZITX_FLASH.ld  basestation Debug.launch  basestation.cmake  basestation.ioc
firmware/basestation-h7/: .gitmodules  .mxproject  CM7_SOURCES  CMakeLists.txt  README.md  basestation.ioc
firmware/basestation-h7/Buildfiles/CM4/: stm32h755xx_flash_CM4.ld
firmware/basestation-h7/Buildfiles/CM7/: Makefile
firmware/basestation-h7/CM4/Core/Src/: main.c
firmware/basestation-h7/CM7/Core/Inc/: main.h
firmware/basestation-h7/CM7/Core/Src/: main.c
firmware/basestation-h7/Makefile/: Makefile
firmware/basestation-h7/Makefile/CM4/: Makefile
firmware/basestation-h7/Makefile/CM7/: Makefile  stm32h755xx_flash_CM7.ld
firmware/basestation/AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
firmware/basestation/Core/Inc/: app_threadx.h  com.h  handle_packet.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
firmware/basestation/Core/Src/: app_threadx.c  com.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  syscalls.c  sysmem.c  system_stm32h5xx.c
firmware/basestation/NetXDuo/App/: app_netxduo.c  app_netxduo.h
firmware/robot/: robot.cmake  robot.ioc
firmware/robot/CM7/Core/Inc/: HandmadeMath.h  arm_mat_util_f32.h  com.h  imu.h  kicker.h  lag_element.h  main.h  motor.h  nav.h  pos_follow.h  state_estimator.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  ui.h
firmware/robot/CM7/Core/Src/: arm_mat_util_f32.c  com.c  imu.c  kicker.c  lag_element.c  main.c  motor.c  nav.c  pos_follow.c  state_estimator.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  sysmem.c  ui.c
firmware/robot/Libraries/lsm6dsl-lib/: .gitignore  library.json
firmware/robot/Libraries/lsm6dsl-lib/include/: HLindgren_LSM6DSL.h  i2c_hal.h  i2c_hal_arduino.h  register_defs.h  spi_hal.h
firmware/robot/Libraries/lsm6dsl-lib/src/: HLindgren_LSM6DSL.c  i2c_hal_arduino.cpp
firmware/shared/inc/: log.h  nrf24l01.h  nrf_helper_defines.h  parsed_vision.pb-c.h  protobuf-c.h  radio.h  ringbuffer.h  robot_action.pb-c.h
firmware/shared/src/: log.c  nrf24l01.c  parsed_vision.pb-c.c  protobuf-c.c  robot_action.pb-c.c
scripts/: export-path-sg
software/GameController/config/: engine.yaml
software/GameViewer/: .editorconfig  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
software/GameViewer/.github/workflows/: publish_ghcr.yaml
software/GameViewer/src/: App.css  App.tsx  index.css
software/GameViewer/src/backend/: gameControllerProxy.cjs  sslVisionProxy.cjs  sslVisionServer.cjs
software/GameViewer/src/components/gameViewer/: GameViewer.css  GameViewer.tsx
software/GameViewer/src/components/sidebar/: Sidebar.css  Sidebar.tsx
software/GameViewer/src/helper/: ParseJson.ts  ParseProto.ts  defaultValues.ts
software/GameViewer/src/hooks/: useAIController.ts  useGameController.ts  useResizeSidebar.tsx  useSSLVision.ts  useWebSocket.ts
software/GameViewer/src/proto/: ssl_vision_detection.ts  ssl_vision_geometry.ts  ssl_wrapper.ts
software/GameViewer/src/types/: AIBall.ts  AIRobot.ts  AIRobotUpdate.ts  Action.ts  SSLBall.ts  SSLFieldUpdate.ts  SSLRobot.ts
software/controller/: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  go.mod  go.sum
software/controller/.github/workflows/: publish_ghcr.yaml
software/controller/cmd/: main.go
software/controller/internal/action/: action.go  dribble.go  init.go  kick.go  move.go  move_remote.go  move_to.go  ping.go  rotate.go  stop.go
software/controller/internal/ai/: activity_executor.go  ai.go
software/controller/internal/ai/activity/: activity_composition.go  activity_interface.go  activity_loop.go  activity_queue.go  goalie.go  kick_at_position.go  kick_the_ball.go  kick_to_player.go  move_to_ball.go  move_to_position.go  ramball.go  ref_stop.go  (+6 more)
software/controller/internal/client/: base_station_client.go  base_station_client_test.go  client_interface.go  sim_client.go  ssl_client.go  ssl_referee_client.go  ssl_vision_client.go  webserver_client.go
software/controller/internal/config/: config.go
software/controller/internal/demos/: ao_sim_scenario.go  fw_real_scenario.go  fw_sim_scenario.go  goalie.go  real_scenario.go  rw_sim_scenario.go  scenario.go
software/controller/internal/helper/: helper.go  none_blocking_keep_latest_channel.go
software/controller/internal/info/: ball.go  game.go  game_analisys.go  game_event.go  game_plan.go  game_stage.go  game_state.go  game_status.go  geometry.go  match_type.go  position.go  rawball.go  rawrobot.go  robot.go  team_info.go
software/controller/internal/logger/: logger.go
software/controller/internal/simulator/: sim_control.go
software/controller/internal/tracker/: balltracker.go  kalmanfilter.go  robottracker.go
software/controller/internal/ui/: keyboard_controll.go
software/controller/internal/visualisation/: README.md  visualising.go
software/controller/new-functionality-tests/ebiten-app/: ebiten-app.go  go.mod  go.sum
software/controller/new-functionality-tests/fyne-app/: go.mod  install.md  local-gui.go
software/controller/new-functionality-tests/plotting/: go.mod  go.sum  plotting.go
software/controller/new-functionality-tests/qt-app/: go.mod  qt-app.go
software/controller/new-functionality-tests/subplots/: go.mod  subplots.go
software/proto-messages/: build_c.sh
software/ssl-vision/: robocup-ssl-cam-0-lut-yuv.xml  robocup-ssl-cam-1-lut-yuv.xml  robocup-ssl-cam-2-lut-yuv.xml  robocup-ssl.xml  start.sh  video-stream-to-file.py
(+32 files in other folders)
